# rpg

./: Cargo.toml  README.md
src/: charset.rs  clipboard.rs  colorize.rs  config.rs  error.rs  generator.rs  lib.rs  main.rs  output.rs  passphrase.rs  wordlist.rs
tests/: cli_integration.rs
