[package]
name = "rpg"
version = "0.1.0"
edition = "2024"
description = "A secure command-line password generator written in Rust"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
