[package]
name = "rpg"
version = "0.2.0"
edition = "2024"
description = "A secure command-line password generator written in Rust"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
arboard = "3.4"
colored = "2.1"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
